--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -125,14 +125,12 @@ a {
 
 .btn-primary::before {
   content: "";
+  background-color: var(--color-primary);
   position: absolute;
   z-index: -1;
   width: 100%;
   height: 100%;
-  box-shadow:
-    inset 0 0 200px var(--color-primary),
-    0 10px 25px 0 rgba(16, 24, 32, 0.15),
-    0 0 0 1px rgba(16, 24, 32, 0.05);
+  box-shadow: 0 10px 25px 0 rgba(16, 24, 32, 0.15), 0 0 0 1px rgba(16, 24, 32, 0.05);
   border-radius: 6rem;
   transition: transform 0.6s cubic-bezier(0.625, 0.05, 0, 1);
 }
